EF Setting and Cnfiguration Done

--- a/DBOperationsWithEFCoreApp/DBOperationsWithEFCoreApp/appsettings.Development.json
+++ b/DBOperationsWithEFCoreApp/DBOperationsWithEFCoreApp/appsettings.Development.json
@@ -5,4 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
+  "ConnectionStrings": {
+    "AppDb": "Server=.;Database=SampleEF;Integrated Security=true;TrustServerCertificate=true;"
+  }
 }
